# dto/service.go
@@ -46,8 +46,8 @@ type ServiceListOutput struct {
 // --------------------------------------------------------------------------------------------------------------------------------------------------------------------
 // note: 访问量查询
 type ServiceStatOutput struct {
-	Today     []int64 `json:"today" form:"today" comment:"今日流量" example:"" validate:""`         //列表
-	Yesterday []int64 `json:"yesterday" form:"yesterday" comment:"昨日流量" example:"" validate:""` //列表
+	Today     []int64 `json:"today" form:"today" comment:"今日流量"  validate:""`        //列表
+	Yesterday []int64 `json:"yesterday" form:"yesterday" comment:"昨日流量" validate:""` //列表
 }
 
 // --------------------------------------------------------------------------------------------------------------------------------------------------------------------
